# xpcsjax

./: .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml
docs/: MIGRATION.md  Makefile  make.bat
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: extract_heterodyne_baseline.py  generate_heterodyne_baseline.py  generate_heterodyne_baselines.py  generate_homodyne_baselines.py  realdata_engine_fit_parity_c044.py
tests/: test_debug_audit_regressions.py  test_io.py  test_lazy_imports.py  test_logging.py  test_logging_primitives.py  test_logging_quality_gate.py  test_logging_wiring_phase1b.py
tests/benchmarks/: test_perf_regression.py
tests/characterization/: test_heterodyne_residual_parity.py  test_homodyne_equivalence.py  test_homodyne_nlsq_ab_parity.py
tests/cli/: test_data_pipeline_phi_filtering.py  test_logging_wiring.py  test_output_resolution.py  test_plot_dispatch_logging.py  test_post_install.py  test_post_install_fish.py  test_simulated_data_grid.py  test_uninstall_scripts.py
tests/config/: test_config_analysis_mode.py  test_config_manager_errors.py  test_get_model.py  test_heterodyne_config_bounds_override.py  test_heterodyne_physics_validators.py  test_heterodyne_registry.py  test_parameter_names.py  test_registry_consistency.py
tests/core/: test_core_gaps.py  test_heterodyne_integral_kernels.py  test_heterodyne_model.py  test_heterodyne_physics.py  test_heterodyne_pointwise_kernel.py  test_homodyne_models.py  test_jax_backend.py
tests/data/: test_aps_u_alloc_guard.py  test_async_io_logging.py  test_cache_filename_guard.py  test_cache_loader_security.py  test_cache_no_pickle_exec.py  test_cache_safety.py  test_frame_dimension_guard.py  test_load_degradation_signal.py  test_loaded_array_validation.py  test_loader_integration.py  test_loader_smoke.py  test_memory_manager_cache_gating.py  test_memory_manager_logging.py  test_no_pickle_loads.py  test_optimization_logging.py  test_quality_controller_smoke.py  test_validation.py  test_validation_crash_coverage.py  test_validation_exception_narrowing.py  test_validation_integrity_logging.py  test_xpcs_dataset.py
tests/heterodyne/: test_config_unwrap.py  test_heterodyne_diagnostics_golden.py  test_l4_fallback_stale_monitor.py  test_logging_parity.py  test_shuffle_regime_parity.py  test_two_component_real_data.py  test_two_component_smoke.py
tests/integration/: test_error_recovery.py  test_heterodyne_fit_smoke.py
tests/optimization/: _heterodyne_fixtures.py  test_adapter_cost_default.py  test_adaptive_regularization.py  test_anti_degeneracy_diagnostics.py  test_anti_degeneracy_layers.py  test_anti_degeneracy_transforms.py  test_chunked_jacfwd.py  test_cmaes_trigger.py  test_config_chunk_size_bounds.py  test_escape_mode_routing.py  test_fourier_jit_safety.py  test_fourier_reparam.py  test_global_escape_contract.py  test_global_escape_finite_guard.py  test_gradient_collapse_callback.py  test_gradient_diagnostics.py  test_gradient_monitor.py  test_heterodyne_cmaes.py  test_heterodyne_cmaes_diagnostics.py  test_heterodyne_cmaes_seed.py  test_heterodyne_config.py  test_heterodyne_constant_mode.py  test_heterodyne_data_prep.py  test_heterodyne_hybrid_streaming.py  test_heterodyne_individual_joint.py  test_heterodyne_joint_escapes.py  test_heterodyne_joint_problem.py  test_heterodyne_layout.py  test_heterodyne_memory_adapter.py  test_heterodyne_modes.py  test_heterodyne_multistart.py  test_heterodyne_result_builder.py  test_heterodyne_results.py  test_heterodyne_return_shape.py  test_heterodyne_strategy_routing.py  test_heterodyne_stratification_config.py  test_heterodyne_stratified_anti_degeneracy_parity.py  test_heterodyne_stratified_execute_layers.py  test_heterodyne_stratified_ls.py  test_hierarchical.py  (+28 more)
tests/parity/: _golden_util.py  test_anti_degeneracy_diagnostics_parity.py  test_defense_layers.py  test_engine_heterodyne_averaged_wrapper_parity.py  test_engine_heterodyne_fit_parity.py  test_engine_heterodyne_realdata_c044.py  test_engine_heterodyne_routing.py  test_engine_route_bugfixes.py  test_engine_route_result_contract.py  test_homodyne_engine_preservation.py  test_l4_per_iteration_parity.py  test_laminar_execute_layers.py  test_layer_activation_matrix.py  test_mode_taxonomy.py  test_no_scipy_least_squares.py  test_pointwise_joint_parity.py
tests/property/: test_diagonal_correction.py  test_parameter_invariants.py
tests/runtime/: test_device_logging.py  test_runtime_shell.py  test_system_validator.py
tests/viz/: conftest.py  test_artifacts.py  test_color_resolution.py  test_diagnostics.py  test_low_level_plots.py  test_orchestrator.py  test_review_regressions.py  test_save_path_validation.py
xpcsjax/: __init__.py  post_install.py  uninstall_scripts.py
xpcsjax/cli/: __init__.py  args_parser.py  commands.py  config_generator.py  config_handling.py  data_pipeline.py  main.py  optimization_runner.py  plot_dispatch.py  result_saving.py  xla_config.py
xpcsjax/config/: __init__.py  heterodyne_parameter_manager.py  heterodyne_parameter_names.py  heterodyne_parameter_space.py  heterodyne_physics_validators.py  manager.py  parameter_manager.py  parameter_names.py  parameter_registry.py  parameter_space.py  physics_validators.py  types.py
xpcsjax/core/: __init__.py  diagonal_correction.py  fitting.py  heterodyne_jax_backend.py  heterodyne_model.py  heterodyne_model_stateful.py  heterodyne_models.py  heterodyne_physics.py  heterodyne_physics_factors.py  heterodyne_physics_kernel.py  heterodyne_physics_utils.py  heterodyne_scaling_utils.py  homodyne_model.py  jax_backend.py  math_primitives.py  model_mixins.py  models.py  physics.py  physics_factors.py  physics_nlsq.py  physics_utils.py  theory.py
xpcsjax/data/: __init__.py  angle_filtering.py  config.py  dataset.py  filtering_utils.py  (+10 more)
(+154 files in other folders)
