[project]
name = "xpcsjax"
version = "0.1.0"
description = "Unified JAX-native XPCS NLSQ fitting (homodyne + heterodyne)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Wei Chen", email = "msdsoftmatter@gmail.com" }]
dependencies = [
    # Core scientific computing (mirrored from homodyne/pyproject.toml)
    "numpy>=2.3",
    "scipy>=1.17",
    # JAX ecosystem (CPU-only in v0.1; GPU support is v0.2+)
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jaxopt>=0.8.3",            # L-BFGS warmup for HYBRID_STREAMING strategy
    "interpax>=0.3.12",         # JIT-safe interpolation (per CLAUDE.md prohibition)
    "nlsq>=0.6.10",             # JAX-native trf + CMA-ES + memory routing
    "evosax>=0.2.0",            # CMA-ES JAX backend (BIPOP restart)
    # Data handling
    "h5py>=3.15,<4.0",
    "pyyaml>=6.0.3",
    # System utilities (homodyne's NLSQ engine depends on all three)
    "psutil>=7.2",              # adaptive RAM detection in select_nlsq_strategy
    "cloudpickle>=3.1",         # HYBRID_STREAMING worker-pool function transport (homodyne dep)
    "tqdm>=4.67.1",             # progress bars used throughout homodyne
    # ML utility (homodyne anti-degeneracy layer uses sklearn.mixture.GaussianMixture)
    "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pytest-xdist>=3.8",
    "hypothesis>=6",            # property tests (Task 33) — xpcsjax-specific addition
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xpcsjax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "JAX_ENABLE_X64=1",
]

[tool.coverage.run]
source = ["xpcsjax"]
# Slow paths only exercised under the env-gated characterization gate
# (XPCSJAX_RUN_CHARACTERIZATION=1) or with real >1 GB Twotime HDF5 fixtures.
# Including them in the default-run denominator misleadingly drops coverage
# from ~60% (unit-runnable code) to ~23% (whole package). The Phase 5 gate is
# how these paths get certified; cov reporting should not pretend otherwise.
omit = [
    # Engine orchestration — entry points exercised end-to-end by
    # tests/characterization (env-gated) and tests/heterodyne (env-gated).
    "xpcsjax/optimization/nlsq/core.py",
    "xpcsjax/optimization/nlsq/wrapper.py",
    "xpcsjax/optimization/nlsq/strategies/hybrid_streaming.py",
    "xpcsjax/optimization/nlsq/strategies/out_of_core.py",
    "xpcsjax/optimization/nlsq/strategies/sequential.py",
    "xpcsjax/optimization/nlsq/strategies/stratified_ls.py",
    "xpcsjax/optimization/nlsq/recovery.py",
    "xpcsjax/optimization/nlsq/progress.py",
    "xpcsjax/optimization/nlsq/result_builder.py",
    # I/O and perf infra — only meaningful with real HDF5 fixtures.
    "xpcsjax/data/performance_engine.py",
    "xpcsjax/data/memory_manager.py",
    "xpcsjax/utils/async_io.py",
    "xpcsjax/utils/path_validation.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
# E501 — line length handled by formatter, not enforced.
# N806/N803 — scientific code uses uppercase math-convention names
#   (D0, JTJ, L, P, Q, R, X, Y) in function/argument scope. Enforcing
#   snake_case here would degrade readability against the physics literature.
ignore = ["E501", "N806", "N803"]

[tool.bandit]
# Mirrors homodyne and heterodyne. Skips rationale:
#   B101 — asserts are used for invariants in physics / NLSQ hot paths
#   B110 — try/except/pass common in I/O fallback shims
#   B403 — serialization import required for HYBRID_STREAMING worker pool
#   B404 — subprocess used in scripts/ for baseline generation
#   B603 — subprocess calls are controlled, no untrusted input
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B110", "B403", "B404", "B603"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
# JAX's ``Array`` and numpy's ``ndarray`` are interchangeable at runtime, but
# their type stubs don't model the relationship. The NLSQ engine repeatedly
# crosses this boundary (jnp.asarray → np.concatenate → CMAESWrapper.fit) so
# these files accumulate ``arg-type``/``assignment`` errors that aren't
# real bugs. The verbatim port from homodyne kept these patterns; the right
# long-term fix is upstream JAX stubs, not local annotation surgery.
module = [
    "xpcsjax.optimization.nlsq.core",
    "xpcsjax.optimization.nlsq.wrapper",
]
disable_error_code = ["arg-type", "assignment", "return-value", "attr-defined", "union-attr", "no-redef", "override", "index"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
