[project]
name = "xpcsjax"
version = "0.1.0"
description = "Unified JAX-native XPCS NLSQ fitting (homodyne + heterodyne)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Wei Chen", email = "msdsoftmatter@gmail.com" }]
dependencies = [
    # Core scientific computing (mirrored from homodyne/pyproject.toml)
    "numpy>=2.3",
    "scipy>=1.17",
    # JAX ecosystem (CPU-only in v0.1; GPU support is v0.2+)
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jaxopt>=0.8.3",            # L-BFGS warmup for HYBRID_STREAMING strategy
    "interpax>=0.3.12",         # JIT-safe interpolation (per CLAUDE.md prohibition)
    "nlsq>=0.6.10",             # JAX-native trf + CMA-ES + memory routing
    "evosax>=0.2.0",            # CMA-ES JAX backend (BIPOP restart)
    # Data handling
    "h5py>=3.15,<4.0",
    "pyyaml>=6.0.3",
    # System utilities (homodyne's NLSQ engine depends on all three)
    "psutil>=7.2",              # adaptive RAM detection in select_nlsq_strategy
    "cloudpickle>=3.1",         # HYBRID_STREAMING worker-pool function transport (homodyne dep)
    "tqdm>=4.67.1",             # progress bars used throughout homodyne
    # ML utility (homodyne anti-degeneracy layer uses sklearn.mixture.GaussianMixture)
    "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pytest-env>=1.1",          # inject JAX_ENABLE_X64=1 via [tool.pytest.ini_options] env
    "pytest-mpl>=0.17",
    "pytest-xdist>=3.8",
    "hypothesis>=6",            # property tests (Task 33) — xpcsjax-specific addition
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "pip-audit>=2.7",           # dependency vulnerability scanning (CI step)
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc-typehints>=2.5",
    "sphinx-design>=0.6",
    "myst-parser>=4.0",
]
viz-fast = [
    "datashader>=0.16",
    "xarray>=2024.0",
    "colorcet>=3.1",
]

[project.scripts]
# Full names
xpcsjax = "xpcsjax.cli.main:main"
xpcsjax-config = "xpcsjax.cli.config_generator:main"
xpcsjax-config-xla = "xpcsjax.cli.xla_config:main"
xpcsjax-post-install = "xpcsjax.post_install:main"
xpcsjax-cleanup = "xpcsjax.uninstall_scripts:main"
xpcsjax-validate = "xpcsjax.runtime.utils.system_validator:main"
# Short aliases (xj = xpcsjax)
xj = "xpcsjax.cli.main:main"
xj-config = "xpcsjax.cli.config_generator:main"
xj-config-xla = "xpcsjax.cli.xla_config:main"
xj-post-install = "xpcsjax.post_install:main"
xj-cleanup = "xpcsjax.uninstall_scripts:main"
xj-validate = "xpcsjax.runtime.utils.system_validator:main"
# Plotting shortcuts (mirror heterodyne's hexp/hsim)
xjexp = "xpcsjax.cli.main:main_xjexp"
xjsim = "xpcsjax.cli.main:main_xjsim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xpcsjax"]

[tool.hatch.build.targets.wheel.shared-data]
"xpcsjax/config/templates" = "share/xpcsjax/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "JAX_ENABLE_X64=1",
]
filterwarnings = [
    # jaxopt is no longer maintained; it emits a DeprecationWarning at import
    # time that would fail collection under -W error. Suppress until LBFGSB
    # in hierarchical.py is migrated to an alternative (tracked as v0.2 work).
    "ignore::DeprecationWarning:jaxopt",
    # pytest-benchmark auto-disables benchmarks when the xdist plugin is active
    # (``make verify`` runs the suite under ``-n auto``). The warning is purely
    # informational — benchmarks simply run as ordinary tests — so it is noise,
    # not an actionable signal.
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
    # nlsq raises its own OptimizeWarning ("maximum number of function
    # evaluations exceeded") inside tests that deliberately use tiny iteration
    # budgets to probe non-convergence / graceful-degradation paths. Convergence
    # quality is asserted via the returned result objects (and logged via
    # nlsq_diagnostics in production), not via this warning, so it is expected
    # test-time noise. (nlsq defines its own class, not scipy's.)
    "ignore::nlsq.result.optimize_warning.OptimizeWarning",
    # numba emits NumbaSystemWarning from tests/viz/test_orchestrator.py
    # ::test_parallel_fallback_on_pool_failure, which INTENTIONALLY simulates a
    # multiprocessing-spawn failure to verify the sequential fallback. The
    # warning is the simulated condition itself, not a real defect.
    "ignore::numba.core.errors.NumbaSystemWarning",
]

[tool.coverage.run]
source = ["xpcsjax"]
# Slow paths only exercised under the env-gated characterization gate
# (XPCSJAX_RUN_CHARACTERIZATION=1) or with real >1 GB Twotime HDF5 fixtures.
# Including them in the default-run denominator misleadingly drops coverage
# from ~60% (unit-runnable code) to ~23% (whole package). The Phase 5 gate is
# how these paths get certified; cov reporting should not pretend otherwise.
omit = [
    # Engine orchestration — entry points exercised end-to-end by
    # tests/characterization (env-gated) and tests/heterodyne (env-gated).
    "xpcsjax/optimization/nlsq/core.py",
    "xpcsjax/optimization/nlsq/wrapper.py",
    "xpcsjax/optimization/nlsq/strategies/hybrid_streaming.py",
    "xpcsjax/optimization/nlsq/strategies/out_of_core.py",
    "xpcsjax/optimization/nlsq/strategies/sequential.py",
    "xpcsjax/optimization/nlsq/strategies/stratified_ls.py",
    "xpcsjax/optimization/nlsq/recovery.py",
    "xpcsjax/optimization/nlsq/progress.py",
    "xpcsjax/optimization/nlsq/result_builder.py",
    # I/O and perf infra — only meaningful with real HDF5 fixtures.
    "xpcsjax/data/performance_engine.py",
    "xpcsjax/data/memory_manager.py",
    "xpcsjax/utils/async_io.py",
    "xpcsjax/utils/path_validation.py",
]

[tool.coverage.report]
# v0.1 floor: 55% across the non-engine-orchestration surface listed in
# [tool.coverage.run].omit above. Raised from 50 after a unit-test campaign
# brought the pure/dispatch/strategy/config/recovery modules to 85-100% and
# added real-fit integration smoke tests (total 55.85%). The remaining gap to
# higher floors is dominated by real-optimizer execution variants already
# validated for correctness by the parity/characterization suite; target 65%
# before v0.2, 80% before v1.0.
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
# E501 — line length handled by formatter, not enforced.
# N806/N803 — scientific code uses uppercase math-convention names
#   (D0, JTJ, L, P, Q, R, X, Y) in function/argument scope. Enforcing
#   snake_case here would degrade readability against the physics literature.
ignore = ["E501", "N806", "N803"]

[tool.ruff.lint.per-file-ignores]
# These modules intentionally execute code before their module-level imports:
# the package __init__ sets JAX env vars (JAX_ENABLE_X64, XLA_FLAGS) before any
# JAX import, and the viz module probes optional deps before importing them. So
# E402 (and the import-sort reorganization I001 would force) is expected here,
# not a defect — fixing it would break the required ordering.
"xpcsjax/__init__.py" = ["E402", "I001"]
"xpcsjax/viz/nlsq_plots.py" = ["E402", "I001"]

[tool.bandit]
# Mirrors homodyne and heterodyne. Skips rationale:
#   B101 — asserts are used for invariants in physics / NLSQ hot paths
#   B110 — try/except/pass common in I/O fallback shims
#   B403 — serialization import required for HYBRID_STREAMING worker pool
#   B404 — subprocess used in scripts/ for baseline generation
#   B603 — subprocess calls are controlled, no untrusted input
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B110", "B403", "B404", "B603"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
# JAX's ``Array`` and numpy's ``ndarray`` are interchangeable at runtime, but
# their type stubs don't model the relationship. The NLSQ engine repeatedly
# crosses this boundary (jnp.asarray → np.concatenate → CMAESWrapper.fit) so
# these files accumulate ``arg-type``/``assignment`` errors that aren't
# real bugs. The verbatim port from homodyne kept these patterns; the right
# long-term fix is upstream JAX stubs, not local annotation surgery.
#
# JIT-trace boundary: kernel functions like ``compute_c2_heterodyne`` and
# ``compute_g2_scaled`` annotate ``dt: float`` and ``phi_angle: float`` even
# though at JIT trace time they receive JAX scalars (``Array``). Widening
# every annotation to ``float | Array`` would have unbounded blast radius
# across consumers; silencing here keeps the signatures self-documenting for
# the hot caller paths while accepting the stub-stub disagreement.
module = [
    "xpcsjax.optimization.nlsq.core",
    "xpcsjax.optimization.nlsq.wrapper",
    "xpcsjax.optimization.nlsq.adapter",
    "xpcsjax.optimization.nlsq.fit_computation",
    "xpcsjax.optimization.nlsq.strategies.residual",
    "xpcsjax.optimization.numerical_validation",
    "xpcsjax.core.heterodyne_jax_backend",
    "xpcsjax.core.heterodyne_model",
    "xpcsjax.data.phi_filtering",
]
disable_error_code = ["arg-type", "assignment", "return-value", "attr-defined", "union-attr", "no-redef", "override", "index"]

[[tool.mypy.overrides]]
# Subset of the JAX/numpy boundary errors for files where ONLY the
# Array-vs-ndarray assignment noise applies (no return-value/attr-defined
# patterns). Narrower disable list so genuine bugs in these files would
# still surface.
module = [
    "xpcsjax.data.xpcs_loader",
]
disable_error_code = ["assignment"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

# Type gate for this project is mypy (non-strict; see [tool.mypy] / `make
# type-check`). Pyright "standard" mode adds ~750 findings that are systemic to
# a JAX/NumPy + conditional-import codebase, not real bugs:
#   * Optional strictness on module-level singletons known non-None by construction
#   * "possibly unbound" / "obscured declaration" from the `try/except` import and
#     `if JAX_AVAILABLE: def f() ... else: def f() ...` fallback idioms
#   * Array/ndarray variance between JAX and NumPy, and untyped `nlsq` interop
# These rules are silenced so Pyright surfaces only structural findings worth
# acting on (e.g. reportUnsupportedDunderAll for __all__ drift, which is kept).
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalOperand = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportPossiblyUnboundVariable = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportAssignmentType = "none"
reportReturnType = "none"
reportInvalidTypeForm = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"
reportCallIssue = "none"
reportTypedDictNotRequiredAccess = "none"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "none"
reportRedeclaration = "none"
